<resources>
    <string name="app_name">Scrapbook2</string>
    <string name="create_account">Don\'t have an account? <b>Sign up.</b></string>
    <string name="please_enter_password">Please enter your password</string>
    <string name="discover_people">Discover People</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_photo">Change photo</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="website">Website</string>
    <string name="bio">Bio</string>
    <string name="private_information">Private Information</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="info">Info</string>
    <string name="reference">Reference</string>
    <string name="account">Account</string>
    <string name="share_to">Share to</string>
    <string name="share">Share</string>
    <string name="enter_a_caption_here">Enter a caption here…</string>
    <string name="follow">Follow</string>
    <string name="next">Next</string>
    <string name="enter_full_name_and_password">Enter full name and password</string>
    <string name="full_name">Full name</string>
    <string name="register">Register</string>
    <string name="you_should_enter_your_password">You should enter your password</string>
    <string name="profile_saved">Profile saved</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="username_is_clicked">Username is clicked</string>
    <string name="please_enter_email_and_password">Please enter email and password</string>
    <string name="this_email_already_exists">This email already exists</string>
    <string name="please_enter_fullname_and_password">Please enter full name and password</string>
    <string name="something_wrong_happened">Something wrong happened. Please try again later</string>
    <string name="comments">Comments</string>
    <string name="post">Post</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="notifications">Notifications</string>
    <string name="liked_your_post">Liked your post</string>
    <string name="started_following_you">Started following you</string>
    <string name="commented">Commented: %s</string>
    <string name="search">Search</string>

    <plurals name="likes_count">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
</resources>
