<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/beige">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/toolbar"
            app:contentInsetStart="0dp">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/beige">

            <ImageView
                    android:id="@+id/back_image"
                    style="@style/icon"
                    android:src="@drawable/ic_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    style="@style/toolbar_title"
                    android:text="@string/settings"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/back_image"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="120dp"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <TextView
            android:id="@+id/sign_out_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/blue"
            android:textSize="22sp"
            android:text="@string/sign_out" app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintVertical_bias="0.235"/>

    <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="@+id/info"
            app:layout_constraintEnd_toEndOf="@+id/info"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:text="@string/account"
            app:layout_constraintVertical_bias="0.027"/>

    <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="@+id/reference"
            app:layout_constraintEnd_toEndOf="@+id/reference"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:text="@string/info"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.097"/>

    <TextView
            android:id="@+id/reference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="@+id/sign_out_text"
            app:layout_constraintEnd_toEndOf="@+id/sign_out_text"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:text="@string/reference"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.167"/>

</android.support.constraint.ConstraintLayout>