<?xml version="1.0" encoding="utf-8"?>
<com.example.scrapbook.screens.common.KeyboardAwareScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                                              xmlns:tools="http://schemas.android.com/tools"
                                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                                              android:id="@+id/scroll_view"
                                                              android:layout_width="match_parent"
                                                              android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".screens.login.LoginActivity"
            android:background="@color/beige">

        <ImageView android:layout_width="94dp"
                   android:layout_height="86dp"
                   android:background="@drawable/left_top" tools:layout_editor_absoluteY="-6dp"
                   tools:layout_editor_absoluteX="-11dp"/>

        <ImageView android:layout_width="94dp"
                   android:layout_height="86dp"
                   android:background="@drawable/left_bottom" tools:layout_editor_absoluteY="658dp"
                   tools:layout_editor_absoluteX="-10dp" android:id="@+id/imageView"/>

        <ImageView android:layout_width="94dp"
                   android:layout_height="86dp"
                   android:background="@drawable/right_top" tools:layout_editor_absoluteY="-7dp"
                   tools:layout_editor_absoluteX="334dp"/>

        <ImageView android:layout_width="94dp"
                   android:layout_height="86dp"
                   android:background="@drawable/right_bottom" tools:layout_editor_absoluteY="655dp"
                   tools:layout_editor_absoluteX="327dp"/>

        <ImageView
                android:id="@+id/instagram_image"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/logo"
                app:layout_constraintTop_toTopOf="parent"/>

        <EditText
                android:id="@+id/email_input"
                style="@style/big_input"
                android:layout_marginTop="40dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@id/instagram_image"/>

        <EditText
                android:id="@+id/password_input"
                style="@style/big_input"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@id/email_input"/>

        <Button
                android:id="@+id/login_btn"
                style="@style/big_btn"
                android:text="@string/log_in"
                app:layout_constraintTop_toBottomOf="@id/password_input"/>

        <TextView
                android:id="@+id/create_account_text"
                android:layout_width="216dp"
                android:layout_height="101dp"
                android:gravity="center"
                android:text="@string/create_account"
                app:layout_constraintBottom_toBottomOf="parent" tools:layout_editor_absoluteX="99dp"/>

    </android.support.constraint.ConstraintLayout>

</com.example.scrapbook.screens.common.KeyboardAwareScrollView>