<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/beige">

    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="97dp"
            android:layout_height="123dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.453"/>

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/toolbar"
            app:contentInsetStart="0dp">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/beige">

            <ImageView
                    android:id="@+id/back_image"
                    style="@style/icon"
                    android:src="@drawable/ic_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"/>

            <TextView
                    android:id="@+id/username_text"
                    style="@style/toolbar_title"
                    android:text="@string/share_to"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/back_image"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintVertical_bias="1.0" app:layout_constraintEnd_toStartOf="@+id/share_text"
                    android:layout_marginEnd="8dp" android:layout_height="40dp" android:layout_width="77dp"
                    android:layout_marginTop="8dp"/>

            <TextView
                    android:id="@+id/share_text"
                    style="@style/toolbar_text"
                    android:text="@string/share"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <ImageView
            android:id="@+id/post_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/person"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/caption_input"
            android:layout_margin="10dp"/>

    <EditText
            android:id="@+id/caption_input"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toEndOf="@id/post_image"
            app:layout_constraintTop_toTopOf="@id/post_image"
            app:layout_constraintBottom_toBottomOf="@id/post_image"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/enter_a_caption_here"
            android:background="@android:color/transparent"/>

</android.support.constraint.ConstraintLayout>