<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/white"
                                             tools:context=".screens.home.HomeActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/profile_image"
            style="@style/toolbar">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/username_text"
                    style="@style/toolbar_title"
                    tools:text="user.name"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="36dp"
            />

            <ImageView
                    android:id="@+id/add_friends_image"
                    style="@style/icon"
                    android:src="@drawable/ic_add_friends"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/settings_image"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="12dp"
                    app:layout_constraintVertical_bias="0.0"/>

            <ImageView
                    android:id="@+id/settings_image"
                    style="@style/icon"
                    android:src="@drawable/ic_more"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="4dp"
                    app:layout_constraintVertical_bias="0.0"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/profile_image"
            app:layout_constraintEnd_toEndOf="@+id/profile_image"
            app:layout_constraintStart_toStartOf="@+id/profile_image"
            app:layout_constraintBottom_toBottomOf="@+id/profile_image"/>

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="130dp"
            android:layout_height="127dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/person"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:layout_marginStart="35dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
            android:id="@+id/posts_count_text"
            style="@style/profile_text_count"
            tools:text="50"
            app:layout_constraintEnd_toEndOf="@+id/posts_text"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.764" app:layout_constraintTop_toTopOf="@+id/followers_count_text"
            app:layout_constraintStart_toStartOf="@+id/edit_profile_btn"/>

    <TextView
            android:id="@+id/posts_text"
            style="@style/profile_text"
            android:text="@string/posts"
            app:layout_editor_absoluteX="100dp"
            app:layout_editor_absoluteY="100dp"
            app:layout_constraintEnd_toEndOf="@+id/edit_profile_btn" android:layout_marginEnd="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/followers_text"/>

    <TextView
            android:id="@+id/followers_count_text"
            style="@style/profile_text_count"
            tools:text="100"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toEndOf="@+id/profile_image" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/followers_text" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.78"/>

    <TextView
            android:id="@+id/followers_text"
            style="@style/profile_text"
            android:text="@string/followers"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/edit_profile_btn"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.878"
            app:layout_constraintStart_toEndOf="@+id/profile_image" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="@+id/following_text"/>

    <TextView
            android:id="@+id/following_count_text"
            style="@style/profile_text_count"
            tools:text="200"
            app:layout_constraintTop_toTopOf="@+id/edit_profile_btn"
            app:layout_constraintStart_toEndOf="@+id/profile_image" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/followers_text" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.78"/>

    <TextView
            android:id="@+id/following_text"
            style="@style/profile_text"
            android:text="@string/following"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/following_count_text"
            app:layout_constraintBottom_toBottomOf="@+id/edit_profile_btn" app:layout_constraintVertical_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            android:layout_marginStart="32dp"/>

    <Button
            android:id="@+id/edit_profile_btn"
            android:layout_width="63dp"
            android:layout_height="56dp"
            android:background="@drawable/button_bg"
            android:minHeight="0dp"
            android:paddingBottom="4dp"
            android:text="@string/edit_profile"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintHorizontal_weight="5"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            android:layout_marginStart="60dp" app:layout_constraintHorizontal_bias="0.766"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/images_recycler"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/images_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/top_border_grey"
            app:layout_constraintTop_toBottomOf="@id/profile_image"
            app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view"
    >

    </android.support.v7.widget.RecyclerView>

    <include layout="@layout/bottom_navigation_view" android:id="@+id/include2"/>

</android.support.constraint.ConstraintLayout>